--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "react"
   ],
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
+    "axios": "^0.19.2",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.0.0",
+    "history": "^5.0.0",
+    "passport": "^0.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
@@ -32,11 +39,17 @@
     "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/eslint": "^7.2.0",
     "@types/express": "^4.17.7",
+    "@types/helmet": "0.0.47",
+    "@types/history": "^4.7.7",
+    "@types/passport": "^1.0.4",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
+    "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.5",
     "@types/webpack": "^4.41.21",
     "@types/webpack-dev-middleware": "^3.7.1",
