--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "lib": ["es6"],
+    "lib": ["es5", "DOM"],
     "strict": true,
     "allowJs": true,
     "target": "es5",
