Creando el header de la aplicación

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "portafolio",
   "version": "0.1.0",
   "description": "Proyecto para mostrar mis hailidades tecnicas",
   "main": "index.js",
@@ -20,12 +20,14 @@
   ],
   "dependencies": {
     "@hapi/boom": "^9.1.0",
+    "asset-require-hook": "^1.2.0",
     "axios": "^0.19.2",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "history": "^5.0.0",
+    "ignore-styles": "^5.0.1",
     "passport": "^0.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -43,14 +45,17 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/eslint": "^7.2.0",
     "@types/express": "^4.17.7",
+    "@types/file-loader": "^4.2.0",
     "@types/helmet": "0.0.47",
     "@types/history": "^4.7.7",
+    "@types/node-sass": "^4.11.1",
     "@types/passport": "^1.0.4",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.5",
+    "@types/sass-loader": "^8.0.0",
     "@types/webpack": "^4.41.21",
     "@types/webpack-dev-middleware": "^3.7.1",
     "@types/webpack-hot-middleware": "^2.25.3",
