--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     }
   },
   "rules": {
+    "no-use-before-define": "off",
     "import/extensions": "off",
     "react/jsx-filename-extension": 0,
     "array-bracket-spacing": 2,
