--- a/package.json
+++ b/package.json
@@ -1,83 +1,76 @@
 {
   "name": "portafolio",
   "version": "0.1.0",
-  "description": "Proyecto para mostrar mis hailidades tecnicas",
+  "description": "Mi portafolio @strcoder",
   "main": "index.js",
   "scripts": {
-    "build": "webpack-cli --config webpack.config.js",
-    "start": "ts-node src/server/index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "dev": "nodemon dist/index",
+    "start": "node dist/index",
+    "build": "node esbuild"
   },
   "author": "@strcoder <aguzmanv09@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "14.6.0"
+    "node": "14.15.4"
   },
   "keywords": [
     "typescript",
     "node",
-    "react"
+    "react",
+    "esbuild"
   ],
   "dependencies": {
-    "@hapi/boom": "^9.1.0",
-    "asset-require-hook": "^1.2.0",
-    "axios": "^0.19.2",
+    "@hapi/boom": "^9.1.1",
+    "@types/react-loadable": "^5.5.4",
+    "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
+    "esbuild": "^0.8.34",
+    "esbuild-plugin-sass": "^0.3.2",
     "express": "^4.17.1",
-    "helmet": "^4.0.0",
+    "express-session": "^1.17.1",
+    "helmet": "^4.4.1",
     "history": "^5.0.0",
-    "ignore-styles": "^5.0.1",
     "passport": "^0.4.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "passport-http": "^0.3.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.14.2",
+    "react-icons": "^4.1.0",
+    "react-loadable": "^5.5.0",
+    "react-loadable-visibility": "^3.0.2",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/cookie-parser": "^1.4.2",
-    "@types/eslint": "^7.2.0",
-    "@types/express": "^4.17.7",
-    "@types/file-loader": "^4.2.0",
-    "@types/helmet": "0.0.47",
-    "@types/history": "^4.7.7",
-    "@types/node-sass": "^4.11.1",
-    "@types/passport": "^1.0.4",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-config": "^5.0.1",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/sass-loader": "^8.0.0",
-    "@types/webpack": "^4.41.21",
-    "@types/webpack-dev-middleware": "^3.7.1",
-    "@types/webpack-hot-middleware": "^2.25.3",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^4.0.0",
-    "css-loader": "^4.2.1",
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-import-resolver-typescript": "^2.2.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
-    "file-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3",
-    "terser-webpack-plugin": "^4.1.0",
-    "ts-loader": "^8.0.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-manifest-plugin": "^2.2.0"
+    "@types/eslint": "^7.2.6",
+    "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/history": "^4.7.8",
+    "@types/node": "^14.14.22",
+    "@types/passport": "^1.0.5",
+    "@types/passport-http": "^0.3.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.0",
+    "@types/react-router": "^5.1.11",
+    "@types/react-router-config": "^5.0.2",
+    "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "typescript": "^4.1.3"
   }
 }
