--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^4.1.0",
     "react-loadable": "^5.5.0",
     "react-loadable-visibility": "^3.0.2",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0"
