--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "name": "portfolio",
-  "builds": [{ "src": "/src/server/index.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/src/server/index.ts" }]
+  "builds": [{ "src": "/src/server/index.tsx", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/src/server/index.tsx" }]
 }
