--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
   "version": 2,
   "name": "portfolio",
-  "builds": [{ "src": "/src/server/index.tsx", "use": "@vercel/node" }],
+  "builds": [
+    { "src": "/src/server/index.tsx", "use": "@vercel/node" },
+    { "src": "/src/frontend/index.tsx", "use": "@vercel/node" }
+  ],
   "routes": [{ "src": "/(.*)", "dest": "/src/server/index.tsx" }]
 }
