Create configuration of vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
   "name": "portfolio",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "builds": [{ "src": "/dist/index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/dist/index.js" }]
 }
