--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,8 @@
   "name": "portfolio",
   "outputDirectory": "dist",
   "builds": [{ "src": "/src/server/index.tsx", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/src/server/index.tsx" }]
+  "routes": [
+    { "src": "/(.*)", "dest": "/src/server/index.tsx" },
+    { "src": "/**/.*", "dest": "/src/server/index.tsx" }
+  ]
 }
