--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,11 @@
   "outputDirectory": "dist",
   "builds": [{ "src": "/src/server/index.tsx", "use": "@vercel/node" }],
   "routes": [
-    { "src": "/(.*)", "dest": "/src/server/index.tsx" },
-    { "src": "/**/.*", "dest": "/src/server/index.tsx" }
-  ]
+    { "src": "/(.*)", "dest": "/src/server/index.tsx" }
+  ],
+  "functions": {
+    "src/server/index.tsx": {
+      "includeFiles": "src/frontend/**"
+    }
+  }
 }
