--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "@strcoder <aguzmanv09@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "18.13.0"
+    "node": "20.10.0"
   },
   "keywords": [
     "typescript",
@@ -21,57 +21,54 @@
     "esbuild"
   ],
   "dependencies": {
-    "@hapi/boom": "^9.1.1",
-    "@types/react-loadable": "^5.5.4",
-    "axios": "^0.21.1",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^8.2.0",
-    "esbuild": "^0.8.34",
-    "esbuild-plugin-sass": "^0.3.2",
-    "express": "^4.17.1",
-    "express-session": "^1.17.1",
-    "helmet": "^4.4.1",
-    "history": "^5.0.0",
-    "passport": "^0.4.1",
+    "@hapi/boom": "^10.0.1",
+    "axios": "^1.7.2",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "eduli-ui": "^0.1.6",
+    "esbuild": "^0.23.0",
+    "esbuild-plugin-sass": "^1.0.1",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
+    "history": "^5.3.0",
+    "passport": "^0.7.0",
     "passport-http": "^0.3.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.1",
-    "react-icons": "^4.11.0",
-    "react-loadable": "^5.5.0",
-    "react-loadable-visibility": "^3.0.2",
-    "react-paypal-button-v2": "^2.6.3",
-    "react-router": "^5.2.0",
+    "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "react-router": "^6.25.1",
     "react-router-config": "^5.1.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/eslint": "^7.2.6",
-    "@types/express": "^4.17.11",
-    "@types/express-session": "^1.17.3",
-    "@types/history": "^4.7.8",
-    "@types/node": "^14.14.22",
-    "@types/passport": "^1.0.5",
-    "@types/passport-http": "^0.3.8",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-helmet": "^6.1.0",
-    "@types/react-router": "^5.1.11",
-    "@types/react-router-config": "^5.0.2",
-    "@types/react-router-dom": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.7",
-    "typescript": "^4.1.3"
+    "@types/cookie-parser": "^1.4.7",
+    "@types/eslint": "^8.56.10",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/history": "^5.0.0",
+    "@types/node": "^20.14.11",
+    "@types/passport": "^1.0.16",
+    "@types/passport-http": "^0.3.11",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-config": "^5.0.11",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^7.16.1",
+    "@typescript-eslint/parser": "^7.16.1",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react": "^7.34.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
+    "typescript": "^5.5.3"
   }
 }
