Refactor frontend context and actions to use hooks and API services
- Removed axios calls from actions and replaced them with API service functions for sending messages and emails.
- Simplified theme management in context actions.
- Introduced new hooks for managing projects, social media, theme, and language.
- Updated context provider to utilize hooks and provide necessary state and actions.
- Removed legacy reducer and integrated state management directly in the context provider.
- Added internationalization support with English and Spanish translations.
- Created a new API service for fetching projects and social media data.
- Updated Vite configuration for improved build and development experience.
- Removed outdated server-side rendering code and related configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -114,5 +114,19 @@ psd
 thumb
 sketch
 
-src/server/public
 scratch
+
+### Vite ###
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
