--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "portafolio",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Mi portafolio @strcoder",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "typecheck": "tsc --noEmit",
+    "preview": "vite preview",
     "test": "jest",
-    "dev": "nodemon",
-    "build": "node esbuild",
-    "start": "node dist/index.js"
+    "lint": "eslint src/frontend --ext .ts,.tsx"
   },
   "author": "@strcoder <aguzmanv09@gmail.com>",
   "license": "MIT",
@@ -16,51 +18,29 @@
   },
   "keywords": [
     "typescript",
-    "node",
     "react",
-    "esbuild"
+    "vite",
+    "portfolio"
   ],
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
     "axios": "^1.7.2",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.4.5",
     "eduli-ui": "^0.3.0",
-    "esbuild": "^0.23.0",
-    "esbuild-plugin-sass": "^1.0.1",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
-    "helmet": "^7.1.0",
-    "history": "^5.3.0",
-    "passport": "^0.7.0",
-    "passport-http": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-router": "^6.25.1",
-    "react-router-config": "^5.1.1",
-    "react-router-dom": "^6.25.1",
-    "zustand": "^5.0.3"
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "@types/eslint": "^8.56.10",
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/history": "^5.0.0",
     "@types/node": "^20.14.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-http": "^0.3.11",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-helmet": "^6.1.11",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-config": "^5.0.11",
-    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -69,7 +49,15 @@
     "eslint-plugin-react": "^7.34.4",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.4",
-    "typescript": "^5.5.3"
+    "sass": "^1.77.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild@<=0.24.2": ">=0.25.0",
+      "tmp@<=0.2.3": ">=0.2.4",
+      "eslint@<9.26.0": ">=9.26.0"
+    }
   }
 }
